# playwright-e2e

./: .gitignore  Dockerfile  Justfile  README.md  package-lock.json  package.json  playwright.config.ts
.github/workflows/: playwright-docker.yml  playwright-gha.yml  playwright.yml
backend/: .gitignore  .tool-versions  Justfile  README.md  app.py  coursework.db  db.py  docker-compose.yml  dockerfile  logging_config.py  pyproject.toml  repomix-output.txt  server.py
backend/dao/: __init__.py  course_repository.py  student_repository.py  teacher_repository.py
backend/data/: course.sql  courses.sql  student_course.sql  students.sql  students_courses.sql  teacher.sql  teacher_course.sql
backend/model/: __init__.py  course.py  student.py  teacher.py
backend/routes/: course_routes.py  student_routes.py  teacher_routes.py
backend/scripts/: init-db.sh
backend/service/: __init__.py  course_service.py  student_service.py  teacher_service.py
backend/sql/: course.sql  courses.sql  student.sql  student_course.sql  students.sql  students_courses.sql  teacher.sql  teacher_course.sql
backend/tests/: test_app.py  test_courses.py  test_students.py
flashcards/: package-lock.json  package.json
flashcards/src/app/: flashcards.yaml  globals.css  layout.tsx  not-found.tsx  page.tsx  types.ts
flashcards/src/app/components/: CardDeck.tsx  FlashcardComponent.tsx  FlashcardDeck.tsx
flashcards/src/app/difficulty/[difficulty]/: page.tsx
flashcards/src/app/flashcards/[id]/: page.tsx
flashcards/src/app/utils/: flashcards.ts
tests/: example-com.spec.ts  flashcards.spec.ts
(+1 files in other folders)
